--- a/step.org
+++ b/step.org
@@ -49,14 +49,14 @@ git push -u origin master
 #+END_SRC
 
 #+RESULTS: quicklisp-functions
-: T
+: NIL
 
 * math-functions
 
 #+name: math-functions
 #+BEGIN_SRC lisp :noweb yes :tangle step.lisp :comments both :cache yes
-  (defconstant *pi* 3.141592653589793d0)
-  (defconstant *2pi* 6.283185307179586d0)
+(defconstant *pi* 3.141592653589793d0)
+(defconstant *2pi* 6.283185307179586d0)
 
 (defun x-of (point) (nth 0 point))
 (defun y-of (point) (nth 1 point))
@@ -146,7 +146,7 @@ git push -u origin master
       (list p1 (list (+ p1x (* scale-factor (cos angle))) (+ p1y (* scale-factor (sin angle)))))
       ))
 
-  (defun vector-rotate (v b-angle)
+(defun vector-rotate (v b-angle)
     (let* ((p1 (nth 0 v))
            (p2 (nth 1 v))
            (p1x (x-of p1))
@@ -170,7 +170,6 @@ git push -u origin master
            (tr-point (list (- p2x p1x) (- p2y p1y))))
       (list (list 0.0d0 0.0d0) tr-point)
       ))
-
 
 (defun vector-transform-by-vector (v tr-vector)
     (let* ((p1 (nth 0 v))
@@ -205,141 +204,8 @@ git push -u origin master
 
 #+END_SRC
 
-#+RESULTS[a93d7667d56ba9c9000128dd0172bb203e6a3004]: math-functions
-: Z-OF
-
-#+NAME: test-math-functions-0
-#+BEGIN_SRC lisp :results output raw
-
-(setq point3 '(100.0d0 0.0))
-(setq point4 '(100.0d0 10.0d0))
-(setq v (list point3 point4))
-(setq a-angle (* *pi* 0.5d0))
-(setq offset -10.0)
-
-(defun print-vector-data (v)
-    (let* ((p1 (nth 0 v))
-	   (p2 (nth 1 v))
-	   (p1x (x-of p1))
-	   (p1y (y-of p1))
-	   (p2x (x-of p2))
-	   (p2y (y-of p2)))
-      (progn
-	(format t "|start-point:| ~8,4F | ~8,4F |~%" p1x p1y)
-	(format t "|end-point:| ~8,4F | ~8,4F |~%" p2x p2y)
-	(format t "|direction-angle:| ~8,4F |  |~%" (rad-to-deg(angle-vector v)))
-	)))
-
-  (print-vector-data v)
-
-  (setq v2 (vector-offset v offset))
-
-  (print-vector-data v2)
-
-#+END_SRC
-
-#+RESULTS: test-math-functions-0
-| start-point:     | 100.0000 |  0.0000 |
-| end-point:       | 100.0000 | 10.0000 |
-| direction-angle: |  90.0000 |         |
-| start-point:     |  90.0000 |  0.0000 |
-| end-point:       |  90.0000 | 10.0000 |
-| direction-angle: |  90.0000 |         |
-
-#+NAME: test-math-functions
-#+BEGIN_SRC lisp :results output raw
-
-    (setq point1 '(100.0d0 0.0))
-    (setq point2 '(200.0d0 0.0d0))
-    (setq v (list point1 point2))
-
-    (let ((vdir (normal-vector v)))
-      (format t "|point1:| ~8,4F | ~8,4F |~%" (x-of point1) (y-of point1))
-      (format t "|point2:| ~8,4F | ~8,4F |~%" (x-of point2) (y-of point2))
-      (format t "|direction:| ~8,4F |~8,4F  |~%" (x-of vdir) (y-of vdir)))
-
-
-    (setq point3 '(000.0d0 10.0))
-    (setq point4 '(000.0d0 20.0d0))
-    (setq v (list point3 point4))
-
-    (let ((vdir (normal-vector v)))
-      (format t "|point1:| ~8,4F | ~8,4F |~%" (x-of point3) (y-of point3))
-      (format t "|point2:| ~8,4F | ~8,4F |~%" (x-of point4) (y-of point4))
-      (format t "|direction:| ~8,4F |~8,4F  |~%" (x-of vdir) (y-of vdir)))
-
-
-    (setq point3 '(000.0d0 10.0))
-    (setq point4 '(000.0d0 -20.0d0))
-    (setq v (list point3 point4))
-
-    (let ((vdir (normal-vector v)))
-      (format t "|point1:| ~8,4F | ~8,4F |~%" (x-of point3) (y-of point3))
-      (format t "|point2:| ~8,4F | ~8,4F |~%" (x-of point4) (y-of point4))
-      (format t "|direction:| ~8,4F |~8,4F  |~%" (x-of vdir) (y-of vdir)))
-
-    (setq point3 '(000.0d0 10.0))
-    (setq point4 '(000.0d0 -20.0d0))
-    (setq v (list point3 point4))
-  (setq a-angle (* *pi* 0.5d0))
-    (let ((vdir (normal-vector v)))
-      (format t "|point1:| ~8,4F | ~8,4F |~%" (x-of point3) (y-of point3))
-      (format t "|point2:| ~8,4F | ~8,4F |~%" (x-of point4) (y-of point4))
-      (format t "|direction-angle:| ~8,4F |  |~%" (angle-vector v))
-      (format t "|direction-angle:| ~8,4F |  |~%" (vector-rotate v a-angle)))
-
-
-#+END_SRC
-
-#+RESULTS: test-math-functions
-| point1:          |                       100.0000 |                         0.0000 |
-| point2:          |                       200.0000 |                         0.0000 |
-| direction:       |                  (0.0d0 0.0d0) |                  (1.0d0 0.0d0) |
-| point1:          |                         0.0000 |                        10.0000 |
-| point2:          |                         0.0000 |                        20.0000 |
-| direction:       |                  (0.0d0 0.0d0) |  (6.123233995736766d-17 1.0d0) |
-| point1:          |                         0.0000 |                        10.0000 |
-| point2:          |                         0.0000 |                       -20.0000 |
-| direction:       |                  (0.0d0 0.0d0) | (6.123233995736766d-17 -1.0d0) |
-| point1:          |                         0.0000 |                        10.0000 |
-| point2:          |                         0.0000 |                       -20.0000 |
-| direction-angle: |                        -1.5708 |                                |
-| direction-angle: | ((0.0d0 10.0) (30.0d0 10.0d0)) |                                |
-
-** test divide step
-
-#+NAME: test-divide-step
-#+BEGIN_SRC lisp :results output 
-  (setq steps 1.2)
-  (setq radius 305.0)
-
-  (dotimes (i 10)
-    (let* ((steps (/ (+ i 1.0) 0.05d0))
-           (points(no-of-points-from-arc-radius steps radius))
-           (step-buffer 0.0d0)
-           (dstep (- steps (/ (* *2pi* radius) points)))
-           )
-      (if (/= steps step-buffer)
-          (progn
-            (format t "|~8,4F | ~d | ~d | ~8,4F | ~%" steps points (mod points 4) dstep)
-            (setq step-buffer steps)
-            ))
-      ))
-#+END_SRC
-
-#+RESULTS: test-divide-step
-#+begin_example
-| 20.0000 | 96 | 0 |   0.0378 | 
-| 40.0000 | 48 | 0 |   0.0756 | 
-| 60.0000 | 32 | 0 |   0.1134 | 
-| 80.0000 | 24 | 0 |   0.1512 | 
-|100.0000 | 16 | 0 | -19.7732 | 
-|120.0000 | 16 | 0 |   0.2268 | 
-|140.0000 | 16 | 0 |  20.2268 | 
-|160.0000 | 8 | 0 | -79.5464 | 
-|180.0000 | 8 | 0 | -59.5464 | 
-|200.0000 | 8 | 0 | -39.5464 | 
-#+end_example
+#+RESULTS[dbac9486d0d582f119c034d8658f16103c3a4904]: math-functions
+: VECTOR-REVERSE
 
 * stream-patches
 #+name: stream-patches
@@ -355,14 +221,6 @@ git push -u origin master
 #+RESULTS: stream-patches
 : EPILOGUE
 
-
-
-* point-functions
-
-#+NAME: point-functions
-#+BEGIN_SRC lisp  :noweb yes :tangle step.lisp :comments both :cache yes
-
-#+END_SRC
 
 * move-functions
 
@@ -381,7 +239,6 @@ git push -u origin master
     (defun clockwise-move-R (point r f str)
       (format str "G02 ~4T X~8,3F ~15T Y~8,3F ~25T Z~8,3F  R~8,3F  F~D ~%" (x-of point) (y-of point) (z-of point) r f))
 
-
     (defun cw-move-R (point r f str)
       (format str "G02 ~4T X~8,3F ~15T Y~8,3F ~25T Z~8,3F  R~8,3F  F~D ~%" (x-of point) (y-of point) (z-of point) r f))
 
@@ -390,7 +247,6 @@ git push -u origin master
 
   (defun ccw-move-R (point r f str)
     (format str "G03 ~4T X~8,3F ~15T Y~8,3F ~25T Z~8,3F  R~8,3F  F~D ~%" (x-of point) (y-of point) (z-of point) r f))
-
 
 #+END_SRC
 
@@ -419,18 +275,6 @@ git push -u origin master
 
 #+RESULTS: step-function
 : STEP-OVER
-
-#+NAME: test-step-function
-#+BEGIN_SRC lisp :results output
-  (format t "~a~%"  (step-over 10.0 1.0 -1.5))
-  (format t "~a~%"  (step-over 1.0 10.0  1.5))
-#+END_SRC
-
-#+RESULTS: test-step-function
-: (10.0 8.5 7.0 5.5 4.0 2.5 1.0)
-: (1.0 2.5 4.0 5.5 7.0 8.5 10.0)
-
-
 
 
 * divide circle
@@ -462,34 +306,6 @@ Divide a circle on points
   #+RESULTS: divide-circle
   : DIVIDE-CIRCLE
 
-
-** test-divide-circle
-
-#+name: test-divide-circle
-#+BEGIN_SRC lisp :results output raw
-
-  (loop for i in (divide-circle '(0 0) 280.0d0 16)
-        do (format t "| ~8,3F |  ~8,3F | ~%" (car i) (cadr i)))
-#+END_SRC
-
-#+RESULTS: test-divide-circle
-|  280.000 |   -0.000 |
-|  258.686 | -107.151 |
-|  197.990 | -197.990 |
-|  107.151 | -258.686 |
-|   -0.000 | -280.000 |
-| -107.151 | -258.686 |
-| -197.990 | -197.990 |
-| -258.686 | -107.151 |
-| -280.000 |    0.000 |
-| -258.686 |  107.151 |
-| -197.990 |  197.990 |
-| -107.151 |  258.686 |
-|    0.000 |  280.000 |
-|  107.151 |  258.686 |
-|  197.990 |  197.990 |
-|  258.686 |  107.151 |
-|  280.000 |    0.000 |
 
 * helical-drill
 
@@ -523,62 +339,6 @@ Divide a circle on points
 #+RESULTS: helical-drill-at-point
 
 
-** test helical function
-
-#+name: test-helical-drill-point
-#+BEGIN_SRC lisp :results output
-  (setq z-list '(12.0 9.0 7.5 5.0 3.0 2.0 1.0 0.0 0.0 1.5 2.5 5.0 7.5 10.0 12.0))
-  (setq radius 10.0) 
-  (setq f- 600.0)
-  (setq f+ 600.0)
-  (setq point '(0.0d0 0.0d0 0.0d0))
-  (setq output-stream *STANDARD-OUTPUT*)
-  (helical-drill point z-list radius f- f+ *STANDARD-OUTPUT*)
-  (helical-drill point z-list 2.0 f- f+ *STANDARD-OUTPUT*)
-
-#+END_SRC
-
-#+RESULTS: test-helical-drill-point
-#+begin_example
-
-(helical drilling point: X   0.000 Y   0.000)
-G0   X  10.000   Y   0.000   Z  12.000   
-G02   X -10.000   Y   0.000   Z   9.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   7.500  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   5.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   3.000  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   2.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   1.000  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   0.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   0.000  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   1.500  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   2.500  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   5.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   7.500  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z  10.000  R  10.000  F600.0 
-G1   X   0.000   Y   0.000   Z  12.000   F600.0 
-
-(helical drilling point: X   0.000 Y   0.000)
-G0   X   2.000   Y   0.000   Z  12.000   
-G02   X  -2.000   Y   0.000   Z   9.000  R   2.000  F600.0 
-G02   X   2.000   Y   0.000   Z   7.500  R   2.000  F600.0 
-G02   X  -2.000   Y   0.000   Z   5.000  R   2.000  F600.0 
-G02   X   2.000   Y   0.000   Z   3.000  R   2.000  F600.0 
-G02   X  -2.000   Y   0.000   Z   2.000  R   2.000  F600.0 
-G02   X   2.000   Y   0.000   Z   1.000  R   2.000  F600.0 
-G02   X  -2.000   Y   0.000   Z   0.000  R   2.000  F600.0 
-G02   X   2.000   Y   0.000   Z   0.000  R   2.000  F600.0 
-G02   X  -2.000   Y   0.000   Z   1.500  R   2.000  F600.0 
-G02   X   2.000   Y   0.000   Z   2.500  R   2.000  F600.0 
-G02   X  -2.000   Y   0.000   Z   5.000  R   2.000  F600.0 
-G02   X   2.000   Y   0.000   Z   7.500  R   2.000  F600.0 
-G02   X  -2.000   Y   0.000   Z  10.000  R   2.000  F600.0 
-G1   X   0.000   Y   0.000   Z  12.000   F600.0 
-#+end_example
-
-
-
-
 ** define drill array
 
 #+name: helical-drill-array
@@ -590,93 +350,6 @@ G1   X   0.000   Y   0.000   Z  12.000   F600.0
 #+END_SRC
 
 #+RESULTS: helical-drill-array
-
-
-** test drill array
-
-We take the values from the following table:
-#+tblname: my-table
-|   x |   y |
-|-----+-----|
-| 0.0 | 0.0 |
-| 1.0 | 1.0 |
-| 2.0 | 2.0 |
-
-
-#+name: test-drill-array
-#+BEGIN_SRC lisp :results output :var point-array=my-table
-    (setq z-list '(10.0 7.5 5.0 2.0 0.0 0.0  2.5  7.5  12.0))
-    (setq radius 10.0) 
-    (setq f- 600.0)
-    (setq output-stream *STANDARD-OUTPUT*)
-
-    (helical-drill-array point-array z-list radius f- f- output-stream)
-#+END_SRC
-
-#+RESULTS: test-drill-array
-#+begin_example
-
-(helical drilling point: X   0.000 Y   0.000)
-G0   X  10.000   Y   0.000   Z  10.000   
-G02   X -10.000   Y   0.000   Z   7.500  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   5.000  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   2.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   0.000  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   0.000  R  10.000  F600.0 
-G02   X  10.000   Y   0.000   Z   2.500  R  10.000  F600.0 
-G02   X -10.000   Y   0.000   Z   7.500  R  10.000  F600.0 
-G1   X   0.000   Y   0.000   Z  12.000   F600.0 
-
-(helical drilling point: X   1.000 Y   1.000)
-G0   X  11.000   Y   1.000   Z  10.000   
-G02   X  -9.000   Y   1.000   Z   7.500  R  10.000  F600.0 
-G02   X  11.000   Y   1.000   Z   5.000  R  10.000  F600.0 
-G02   X  -9.000   Y   1.000   Z   2.000  R  10.000  F600.0 
-G02   X  11.000   Y   1.000   Z   0.000  R  10.000  F600.0 
-G02   X  -9.000   Y   1.000   Z   0.000  R  10.000  F600.0 
-G02   X  11.000   Y   1.000   Z   2.500  R  10.000  F600.0 
-G02   X  -9.000   Y   1.000   Z   7.500  R  10.000  F600.0 
-G1   X   1.000   Y   1.000   Z  12.000   F600.0 
-
-(helical drilling point: X   2.000 Y   2.000)
-G0   X  12.000   Y   2.000   Z  10.000   
-G02   X  -8.000   Y   2.000   Z   7.500  R  10.000  F600.0 
-G02   X  12.000   Y   2.000   Z   5.000  R  10.000  F600.0 
-G02   X  -8.000   Y   2.000   Z   2.000  R  10.000  F600.0 
-G02   X  12.000   Y   2.000   Z   0.000  R  10.000  F600.0 
-G02   X  -8.000   Y   2.000   Z   0.000  R  10.000  F600.0 
-G02   X  12.000   Y   2.000   Z   2.500  R  10.000  F600.0 
-G02   X  -8.000   Y   2.000   Z   7.500  R  10.000  F600.0 
-G1   X   2.000   Y   2.000   Z  12.000   F600.0 
-#+end_example
-
-
-
-** drill-array-on-divide-circle
-
-#+name: drill-array-on-divide-circle
-#+BEGIN_SRC lisp :results output file :file test-helical-drill-on-circle.ngc
-  (setq z-list '(30.0 16.0 15.0 12.0 7.5 5.0 2.0  0.0 0.0 2.5 7.0 15.0 18.0  ))
-  (setq tool-diameter 3.175)
-  (setq external-diameter 10.0)
-  (setq radius (/ (- external-diameter tool-diameter)2.0d0))
-  (setq f- 600.0)
-  (setq output-stream *STANDARD-OUTPUT*)
-
-  (setq center '(0.0d0 0.0d0))
-  (setq divide-radius 300.0)
-  (setq no-of-points 4) 
-  (setq point-array (divide-circle center divide-radius no-of-points))
-
-  (prologue 2800 output-stream) 
-  (helical-drill-array point-array z-list radius f- f- output-stream)
-  (epilogue output-stream)
-#+END_SRC
-
-#+RESULTS: drill-array-on-divide-circle
-[[file:test-divide.ngc]]
-
-
 
 
 
@@ -703,39 +376,13 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
                  (if (cdr z-list)
                      (linear-move (list xi yi (pop z-list)) f- output-stream)
                      (goto (list xi yi (pop z-list)) output-stream)
-                     ))))
-      )
-
-
+                     )))))
 #+END_SRC
 
 #+RESULTS: drill-at-point
 
 
-** test drill function
-
-#+name: helical-drill-test
-#+BEGIN_SRC lisp :results output
-  (setq z-list '(20.0 10.0 5.0 0.0 5.0 10.0 20.0))
-  (setq f- 600.0)
-  (setq point '(0.0d0 0.0d0 0.0d0))
-  (setq output-stream *STANDARD-OUTPUT*)
-  (drill-point point z-list f- f+ *STANDARD-OUTPUT*)
-#+END_SRC
-
-#+RESULTS: helical-drill-test
-: 
-: (drilling point: X   0.000 Y   0.000)
-: G0   X   0.000   Y   0.000   Z  20.000   
-: G1   X   0.000   Y   0.000   Z  10.000   F600.0 
-: G1   X   0.000   Y   0.000   Z   5.000   F600.0 
-: G1   X   0.000   Y   0.000   Z   0.000   F600.0 
-: G1   X   0.000   Y   0.000   Z   5.000   F600.0 
-: G1   X   0.000   Y   0.000   Z  10.000   F600.0 
-: G0   X   0.000   Y   0.000   Z  20.000   
-
-
-** define drill array
+* define drill array
 
 #+name: drill-array
 #+BEGIN_SRC lisp :results output :noweb yes :tangle yes 
@@ -746,89 +393,6 @@ G1   X   2.000   Y   2.000   Z  12.000   F600.0
 #+END_SRC
 
 #+RESULTS: drill-array
-
-
-** test drill array
-
-We take the values from the following table:
-#+tblname: my-table
-|   x |   y |
-|-----+-----|
-| 0.0 | 2.0 |
-| 1.0 | 3.0 |
-| 100 | 200 |
-|   1 |  10 |
-|   2 |   2 |
-
-#+name: test-drill-array-
-#+BEGIN_SRC lisp :results output :var point-array=my-table
-    (setq z-list '(10.0 7.5 5.0 2.0  0.0 0.0  2.5  7.5  12.0))
-    (setq f- 600.0)
-    (setq output-stream *STANDARD-OUTPUT*)
-
-    (drill-array point-array z-list f- f+ output-stream)
-#+END_SRC
-
-#+RESULTS: test-drill-array-
-#+begin_example
-
-(drilling point: X   0.000 Y   0.000)
-G0   X   0.000   Y   0.000   Z  10.000   
-G1   X   0.000   Y   0.000   Z   7.500   F600.0 
-G1   X   0.000   Y   0.000   Z   5.000   F600.0 
-G1   X   0.000   Y   0.000   Z   2.000   F600.0 
-G1   X   0.000   Y   0.000   Z   0.000   F600.0 
-G1   X   0.000   Y   0.000   Z   0.000   F600.0 
-G1   X   0.000   Y   0.000   Z   2.500   F600.0 
-G1   X   0.000   Y   0.000   Z   7.500   F600.0 
-G0   X   0.000   Y   0.000   Z  12.000   
-
-(drilling point: X   1.000 Y   1.000)
-G0   X   1.000   Y   1.000   Z  10.000   
-G1   X   1.000   Y   1.000   Z   7.500   F600.0 
-G1   X   1.000   Y   1.000   Z   5.000   F600.0 
-G1   X   1.000   Y   1.000   Z   2.000   F600.0 
-G1   X   1.000   Y   1.000   Z   0.000   F600.0 
-G1   X   1.000   Y   1.000   Z   0.000   F600.0 
-G1   X   1.000   Y   1.000   Z   2.500   F600.0 
-G1   X   1.000   Y   1.000   Z   7.500   F600.0 
-G0   X   1.000   Y   1.000   Z  12.000   
-
-(drilling point: X   2.000 Y   2.000)
-G0   X   2.000   Y   2.000   Z  10.000   
-G1   X   2.000   Y   2.000   Z   7.500   F600.0 
-G1   X   2.000   Y   2.000   Z   5.000   F600.0 
-G1   X   2.000   Y   2.000   Z   2.000   F600.0 
-G1   X   2.000   Y   2.000   Z   0.000   F600.0 
-G1   X   2.000   Y   2.000   Z   0.000   F600.0 
-G1   X   2.000   Y   2.000   Z   2.500   F600.0 
-G1   X   2.000   Y   2.000   Z   7.500   F600.0 
-G0   X   2.000   Y   2.000   Z  12.000   
-#+end_example
-
-
-
-** drill-array-on-divide-circle
-
-#+name: drill-array-on-divide-circle
-#+BEGIN_SRC lisp :results output file :file test-divide.ngc
-  (setq z-list '(30.0 16.0 15.0 12.0 7.5 5.0 2.0  0.0 0.0 2.5 14  16.0 30.0 ))
-  (setq radius 10.0) 
-  (setq f- 1600.0)
-  (setq output-stream *STANDARD-OUTPUT*)
-
-  (setq center '(0.0d0 0.0d0))
-  (setq divide-radius 100.0)
-  (setq no-of-points 16) 
-  (setq point-array (divide-circle center divide-radius no-of-points))
-
-  (prologue 12000 output-stream) 
-  (drill-array point-array z-list f- f+ output-stream)
-  (epilogue output-stream)
-#+END_SRC
-
-#+RESULTS: drill-array-on-divide-circle
-[[file:test-divide.ngc]]
 
 * trochoidal move
 
@@ -841,42 +405,6 @@ We divide the move on cycles
 4. move to 2
 
 We skip (1) for now.
-
-** test line 1
-We plan to test the trochoidal move on a line across x
-#+NAME: test-trochoidal-line
-#+BEGIN_SRC lisp :tangle yes :results output file :file test-divide.ngc
-
-          ;;;linear move
-    (setq l-step 1.5d0)
-          ;;;radius of circle
-    (setq radius 1.5d0)
-    (setq zi 0.0)
-    (setq f- 600)
-
-    (setq start-point '(0.0d0 0.0d0))
-
-    (setq output-stream *STANDARD-OUTPUT*)
-
-    (setq x0 (x-of start-point))
-    (setq y0 (y-of start-point))
-
-    (prologue 10000 output-stream)
-    (dotimes (n 100)
-      (let ((xi (+ x0 (* n l-step)))
-            (yi (+ y0 (* n l-step))))
-        (linear-move (list xi y0 zi)  f- output-stream)
-        (clockwise-move-R (list xi (+ y0 radius radius) zi) radius f- output-stream)
-        (clockwise-move-R (list xi (+ y0 0.0) zi) radius f- output-stream)
-        ))
-  (epilogue output-stream)
-#+END_SRC
-
-#+RESULTS: test-trochoidal-line
-[[file:test-divide.ngc]]
-
-#+RESULTS: tests
-[[file:test-divide.ngc]]
 
 
 
@@ -892,136 +420,9 @@ We borrow from divide circle the points
            (external-points (divide-circle center (+ radius trochoidal-width) no-of-points))
            (couples (mapcar #'list internal-points external-points)))
       couples))
-
   #+END_SRC
 
   #+RESULTS: divide-circle-2
-  
-** test divide circle
-
-#+name: test-divide-circle-2
-#+BEGIN_SRC lisp :results output raw
-        (setq center '(0.0 0.0))
-        (setq radius 280.0d0)
-        (setq trochoidal-width 10.0)
-        (setq no-of-points 8)
-
-    (setq couple (point-couples center radius trochoidal-width no-of-points))
-
-    (dotimes (i no-of-points)
-      (let* ((i (pop couple))
-             (in (car i))
-             (out (cadr i)))
-        (format t "| ~8,3F |  ~8,3F | | ~8,3F |  ~8,3F |  ~%" (x-of in) (y-of in) (x-of out) (y-of out))))
-  #+END_SRC
-
-  #+RESULTS: test-divide-circle-2
-  |  280.000 |   -0.000 |   |  290.000 |   -0.000 |
-  |  197.990 | -197.990 |   |  205.061 | -205.061 |
-  |   -0.000 | -280.000 |   |   -0.000 | -290.000 |
-  | -197.990 | -197.990 |   | -205.061 | -205.061 |
-  | -280.000 |    0.000 |   | -290.000 |    0.000 |
-  | -197.990 |  197.990 |   | -205.061 |  205.061 |
-  |    0.000 |  280.000 |   |    0.000 |  290.000 |
-  |  197.990 |  197.990 |   |  205.061 |  205.061 |
-
-
-
-  
-
-
-
-
-
-
-
-** test divide orthogonal
-
-
-
-#+name: test-divide-ortho
-#+BEGIN_SRC lisp :results output raw :tangle yes :noweb yes
-
-(setq point1 '(0.0 0.0))
-(setq point2 '(100 0.0))
-(setq point3 '(100 100.0))
-(setq point4 '(0 100.0))
-
-(setq trochoidal-width 10.0)
-(setq l-step 9.1)
-
-(setq vector1 (list point1 point2))
-(setq vector2 (list point2 point3))
-(setq vector3 (list point3 point4))
-(setq vector4 (list point4 point1))
-
-(setq length-vector1 (length-vector vector1))
-(setq direction-vector1 (length-vector vector1))
-
-(setq no-of-points (round(/ length-vector1 l-step)))
-(setq r-step (/ length-vector1 no-of-points))
-
-(defun divide-vector (v step-length)
-  (let* ((vdir (normal-vector v))
-         (vdir-per (normal-vector-rotate vdir (* *pi* 05d0)))
-         (start-point (nth 0 v))
-         (end-point (nth 1 v))
-         (vlength (length-vector v))
-         (no-of-points (round(/ length-vector1 l-step)))
-         (r-step (round(/ vlength no-of-points)))
-         (vector-array '()))
-    (progn
-      (dotimes (i no-of-points)
-        (let ((point (p+ start-point (scale-point vdir (* i r-step))))
-              )
-          (push point vector-array)
-          ))
-      (reverse vector-array))))
-
-(defun offset-vector (v offset)
-  (let* ((vdir (normal-vector v))
-         (start-point (nth 0 v))
-         (end-point (nth 1 v))
-         (vlength (length-vector v))
-         (vector-array '())
-         (vdir-perpendicular (normal-vector-rotate vdir (* *pi* 0.5)))
-         (new-start-point (p+ start-point (scale-point vdir-perpendicular offset)))
-         (new-end-point (p+ end-point (scale-point vdir-perpendicular (sqrt offset)))))
-    (list new-start-point new-end-point)))
-
-(setq v vector2)
-(setq offset 10.0d0)
-
-(setq vdir (normal-vector v))
-(setq start-point (nth 0 v))
-(setq end-point (nth 1 v))
-(setq vlength (length-vector v))
-(setq vector-array '())
-(setq vdir-perpendicular (vector-rotate vdir (* *pi* 0.5)))
-;;(setq new-start-point (p+ start-point (vector-scale vdir-perpendicular offset)))
-;;(setq new-end-point (p+ end-point (scale-point vdir-perpendicular (sqrt offset))))
-
-
-;; (let ((v start-point))
-;;   (format t "| start-point: |  ~8,3F | ~8,3F | ~%" (x-of v) (y-of v)))
-;; (let ((v end-point))
-;;   (format t "| end-point: |  ~8,3F | ~8,3F | ~%" (x-of v) (y-of v)))
-;; (let ((v vdir))
-;;   (format t "| vdir: |  ~8,3F | ~8,3F | ~%" (x-of v) (y-of v)))
-;; (let ((v vlength))
-;;   (format t "| vlength: |  ~8,3F | | ~%" v))
-;; (let ((v (vector-rotate vector4 (* *pi* 0.5))))
-;;   (format t "| vdir-perpendicular: |  ~8,3F | ~8,3F | ~%" (x-of v) (y-of v)))
-
-
-          #+END_SRC
-
-          #+RESULTS: test-divide-ortho
-          | start-point:        |   0.000 | 100.000 |
-          | end-point:          |   0.000 |   0.000 |
-          | vdir:               |   0.000 |  -1.000 |
-          | vlength:            | 100.000 |         |
-          | vdir-perpendicular: |  -0.753 |  -0.658 |
 
 ** external-trochoidal-circle
   
@@ -1103,121 +504,4 @@ We borrow from divide circle the points
 
 #+RESULTS[5e3f7cc01028ccf8e891b9ce90996c299cb8d8a8]: trochoidal-circle
 : EXTERNAL-TROCHOIDAL-CIRCLE
-
-  
-** test-trochoidal-circle-external-610
-  
-#+NAME: test-trochoidal-circle-610
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-610--3.0mm-diameter-external.ngc :comments both :cache yes
-  (setq output-stream *STANDARD-OUTPUT*)
-                    ;;;linear step
-  (setq l-step 10.0d0)
-  (setq zi 0.0)
-  (setq f- 900)
-  (setq center '(0.0 0.0))
-  (setq tool-diameter 3.175d0)
-  (setq internal-radius (/ 610.0 2.0d0))
-                          ;;;most internal radius of the path
-
-  (setq trochoidal-width 4.5)
-  (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-
-  (external-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-
-#+END_SRC
-
-#+RESULTS[40cc094f5c1473133d5f40d83231a9f85d803646]: test-trochoidal-circle-610
-[[file:trochoidal-circle-610--3.0mm-diameter-external.ngc]]
-
-#+RESULTS: test-trochoidal-circle
-[[file:trochoidal-circle.ngc]]
-
-
-
-| x                 |   307.087 |        |
-| r-tool            |    1.5875 |        |
-| internal radius   |  305.4995 |        |
-| internal diameter |   610.999 |        |
-| length            | 1918.5369 | mm     |
-| feed              |       300 | mm/min |
-| passes            |         2 |        |
-|                   | 12.790246 | min    |
-#+TBLFM: @2$2=3.175/2.0::@3$2=@1-@2::@4$2=2*@3::@5$2=@4*3.14::@8$2=@5*@7/@6
-
-|   |  460 |
-|   |  600 |
-|   | 2120 |
-|   |      |
-#+TBLFM: @1$2=560-100::@2$2=700-100::@3$2=2*@1+2*@2
-
-
-
-
-
-** test-trochoidal-circle-internal-500
-  
-#+NAME: test-trochoidal-internal-circle-500
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-500-diameter-internal.ng :comments both :cache yes
-  (setq output-stream *STANDARD-OUTPUT*)
-  (setq l-step 2.0d0)
-  (setq zi 7.5)
-  (setq f- 900)
-  (setq center '(0.0 0.0))
-
-  (setq internal-radius (/ 498 2.0d0))
-  (setq tool-diameter 3.175)
-  (setq trochoidal-width 4.5)
-  (setq z-list-in '(50.0 18.0 16.0 15.0 12.0 8.0 5.0 0.0 0.0))
-
-  (internal-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-
-#+END_SRC
-
-
-#+RESULTS: test-trochoidal-internal-circle-500
-[[file:trochoidal-circle-500-diameter-internal.ngc]]
-
-| x                 |  247.413 |   |
-| r-tool            |   1.5875 |   |
-| internal radius   | 249.0005 |   |
-|-------------------+----------+---|
-| internal diameter |      496 |   |
-| internal radius   |     248. |   |
-| x                 |  242.413 |   |
-| passes            |   1.5875 |   |
-|                   | 240.8255 |   |
-#+TBLFM: @3$2=@1+@2::@5$2=@4/2.0::@8$2=@6-@7
-
-** test-trochoidal-circle-internal-496
-  
-#+NAME: test-trochoidal-internal-circle-496
-#+BEGIN_SRC lisp :tangle yes :results output file :file trochoidal-circle-496-diameter-internal.ngc :comments both :cache yes
-(setq output-stream *STANDARD-OUTPUT*)
-                    ;;;linear step
-(setq l-step 1.5d0)
-(setq zi 0.0)
-(setq f- 900)
-(setq center '(0.0 0.0))
-(setq internal-radius (/ 494 2.0d0))
-(setq tool-diameter 3.175)
-(setq trochoidal-width 4.0)
-
-(internal-trochoidal-circle l-step zi f- center tool-diameter internal-radius trochoidal-width z-list-in output-stream)
-
-#+END_SRC
-
-#+RESULTS: test-trochoidal-internal-circle-496
-[[file:trochoidal-circle-496-diameter-internal.ngc]]
-
-
-| x                 |  247.413 |   |
-| r-tool            |   1.5875 |   |
-| internal radius   | 249.0005 |   |
-|-------------------+----------+---|
-| internal diameter |      496 |   |
-| internal radius   |     248. |   |
-| x                 |  242.413 |   |
-| passes            |   1.5875 |   |
-|                   | 240.8255 |   |
-#+TBLFM: @3$2=@1+@2::@5$2=@4/2.0::@8$2=@6-@7
 
